<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment"
    android:orientation="vertical">


    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="310dp"
        android:layout_height="284dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/usButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us" />

        <RadioButton
            android:id="@+id/ukraineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ua" />

        <RadioButton
            android:id="@+id/canadaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ca" />

        <RadioButton
            android:id="@+id/britButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gb" />

        <RadioButton
            android:id="@+id/argentinaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ar" />

        <RadioButton
            android:id="@+id/mexicoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mx" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryChoice"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>