<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_browse">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.zybooks.thewatchfuleye.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse"
        />
    <fragment
        android:id="@+id/navigation_category"
        android:name="com.zybooks.thewatchfuleye.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category"
        />
    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.zybooks.thewatchfuleye.SavedFragment"
        android:label="@string/title_Saved"
        tools:layout="@layout/fragment_saved"
        />

</navigation>